@@ -177,10 +177,10 @@ my %config = (
     ) : (),
     extra_cpp_compiler_flags => [ '-std=c++0x' ],
     extra_linker_flags => ($cover ? '-lgcov -fprofile-arcs -ftest-coverage' : ''),
-    c_source => { 'libsass' => [ qw(
+    c_source => { 'libsass' => [ sort qw(
         sass2scss.cpp node.cpp sass_util.cpp remove_placeholders.cpp
         ast.cpp base64vlq.cpp bind.cpp constants.cpp context.cpp contextualize.cpp
-        copy_c_str.cpp error_handling.cpp eval.cpp expand.cpp
+        copy_c_str.cpp error_handling.cpp eval.cpp expand.cpp cencode.c json.cpp
         extend.cpp file.cpp functions.cpp inspect.cpp output_compressed.cpp
         output_nested.cpp parser.cpp prelexer.cpp sass.cpp sass_interface.cpp
         source_map.cpp to_c.cpp to_string.cpp units.cpp utf8_string.cpp util.cpp
